fix: change side-menu container overflow setting (#69)
* fix: change side0menu container overflow setting

* fix: change nav list justify-content settings

--- a/src/modules/header/header.scss
+++ b/src/modules/header/header.scss
@@ -31,7 +31,8 @@
     .nav-list {
       display: flex;
       flex-wrap: nowrap;
-      justify-content: space-between;
+      justify-content: flex-start;
+      gap: 40px;
       align-items: center;
 
       .nav_item {
@@ -141,7 +142,7 @@
     flex-direction: column;
     align-items: center;
     height: 100%;
-    overflow-y: scroll;
+    overflow-y: auto;
     padding-top: 100px;
 
     .side-menu-nav {
